--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Товары для маркетплейсов оптом. Товары из Китая со склада в Москве — Super-Opt</title>
-    <meta name="description" content="Интернет-магазин популярных товаров для маркетплейсов оптом со склада в Москве. Товары из Китая в наличии и под заказ. Быстрая доставка, низкие цены, большой выбор товаров.">
-    <meta name="keywords" content="Товары для маркетплейсов оптом, товары оптом, товары для детей оптом, хиты продаж, товары для CPA сетей оптом, хиты продаж 2023, товары для интернет магазинов, товары для маркетплейсов 2023, товары из Китая оптом, товары из Китая, товары из России оптом">
+    <title>Товары для маркетплейсов оптом — Super-Opt</title>
+    <meta name="description" content="Интернет-магазин популярных товаров для маркетплейсов оптом со склада в Москве.">
+    <meta name="keywords" content="товары оптом, товары из Китая, маркетплейсы">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -23,22 +23,68 @@
             <nav>
                 <ul>
                     <li><a href="/">Главная</a></li>
-                    <li><a href="/catalog">Каталог товаров</a></li>
-                    <li><a href="/about">О компании</a></li>
-                    <li><a href="/delivery">Доставка и оплата</a></li>
-                    <li><a href="/contacts">Контакты</a></li>
+                    <li><a href="#catalog">Каталог товаров</a></li>
+                    <li><a href="#about">О компании</a></li>
+                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
     <!-- Основной контент -->
     <main>
-        <div class="container">
-            <h1>Добро пожаловать в Super-Opt</h1>
-            <p>Мы предлагаем широкий ассортимент товаров для маркетплейсов оптом со склада в Москве.</p>
-            <a href="/catalog" class="btn">Смотреть каталог</a>
-        </div>
+        <section id="about">
+            <div class="container">
+                <h1>Добро пожаловать в Super-Opt</h1>
+                <p>Мы предлагаем широкий ассортимент товаров для маркетплейсов оптом со склада в Москве.</p>
+                <a href="#catalog" class="btn">Смотреть каталог</a>
+            </div>
+        </section>
+
+        <!-- Каталог товаров -->
+        <section id="catalog">
+            <div class="container">
+                <h2>Каталог товаров</h2>
+                <div class="product-grid">
+                    <!-- Карточка товара -->
+                    <div class="product-card">
+                        <img src="images/product1.jpg" alt="Товар 1">
+                        <h3>Товар 1</h3>
+                        <p>Описание товара 1.</p>
+                        <p class="price">500 руб.</p>
+                        <a href="#" class="btn">Купить</a>
+                    </div>
+                    <!-- Карточка товара -->
+                    <div class="product-card">
+                        <img src="images/product2.jpg" alt="Товар 2">
+                        <h3>Товар 2</h3>
+                        <p>Описание товара 2.</p>
+                        <p class="price">700 руб.</p>
+                        <a href="#" class="btn">Купить</a>
+                    </div>
+                    <!-- Карточка товара -->
+                    <div class="product-card">
+                        <img src="images/product3.jpg" alt="Товар 3">
+                        <h3>Товар 3</h3>
+                        <p>Описание товара 3.</p>
+                        <p class="price">1200 руб.</p>
+                        <a href="#" class="btn">Купить</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Контакты -->
+        <section id="contacts">
+            <div class="container">
+                <h2>Контакты</h2>
+                <p>Адрес: Москва, ул. Примерная, д. 1</p>
+                <p>Телефон: <a href="tel:88005005870">8 800 5005 870</a></p>
+                <p>Email: <a href="mailto:sale@super-opt.com">sale@super-opt.com</a></p>
+            </div>
+        </section>
     </main>
+
     <!-- Подвал сайта -->
     <footer>
         <div class="container">
