--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Товары для маркетплейсов оптом — Super-Opt</title>
     <meta name="description" content="Интернет-магазин популярных товаров для маркетплейсов оптом со склада в Москве.">
     <meta name="keywords" content="товары оптом, товары из Китая, маркетплейсы">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
