--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <div class="product-card">
                         <img src="images/product1.jpg" alt="Товар 1">
                         <h3>Товар 1</h3>
-                        <p>Описание товара 1.</p>
-                        <p class="price">500 руб.</p>
+                        <p>Внешний аккумулятор | Power bank 20000 mAh DP13</p>
+                        <p class="price">1500 руб.</p>
                         <a href="#" class="btn">Купить</a>
                     </div>
                     <!-- Карточка товара -->
