--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
                     <div class="product-card">
                         <img src="images/product2.jpg" alt="Товар 2">
                         <h3>Товар 2</h3>
-                        <p>Описание товара 2.</p>
-                        <p class="price">700 руб.</p>
+                        <p>Видеорегистратор</p>
+                        <p class="price">1000 руб.</p>
                         <a href="#" class="btn">Купить</a>
                     </div>
                     <!-- Карточка товара -->
                     <div class="product-card">
                         <img src="images/product3.jpg" alt="Товар 3">
                         <h3>Товар 3</h3>
-                        <p>Описание товара 3.</p>
-                        <p class="price">1200 руб.</p>
+                        <p>Портативная электростанция</p>
+                        <p class="price">5500 руб.</p>
                         <a href="#" class="btn">Купить</a>
                     </div>
                 </div>
