--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                         <h3>Товар 1</h3>
                         <p>Внешний аккумулятор | Power bank 20000 mAh DP13</p>
                         <p class="price">1500 руб.</p>
-                        <a href="#" class="btn">Купить</a>
+                        <a href="/product/1" class="btn">Купить</a>
+
                     </div>
                     <!-- Карточка товара -->
                     <div class="product-card">
