--- a/product1.html
+++ b/product1.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Товар 1 — Super-Opt</title>
     <meta name="description" content="Описание и характеристики товара 1. Купить оптом в Super-Opt.">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="product1.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
