--- a/product1.html
+++ b/product1.html
@@ -41,7 +41,7 @@
                         <img src="images/product1.jpg" alt="Товар 1">
                     </div>
                     <div class="product-description">
-                        <p>Подробное описание товара 1. Это может быть текст, который описывает характеристики, преимущества и использование товара.</p>
+                        <p>Внешний аккумулятор | Power bank Remax RPP-183 30000 mAh.</p>
                         <ul>
                             <li> Внешний аккумулятор | Power bank Remax RPP-183 30000 mAh доступен к покупке по низкой цене со склада в Москве с доставкой по всей России и СНГ.
 
