--- a/product1.html
+++ b/product1.html
@@ -42,12 +42,12 @@
                     </div>
                     <div class="product-description">
                         <p>Внешний аккумулятор | Power bank Remax RPP-183 30000 mAh.</p>
-                        <ul>
+                        <br><br>
                             <li> Внешний аккумулятор | Power bank Remax RPP-183 30000 mAh доступен к покупке по низкой цене со склада в Москве с доставкой по всей России и СНГ.
 
 Внешний аккумулятор – устройство автономной подачи тока, портативная литий-ионная батарейка, с помощью которой можно заряжать мобильные устройства вроде смартфона, планшета или ноутбука.
 </li>
-                            <li> Принцип работы </li>
+                            <p>Принцип работы</p> 
 <li>Портативный аккумулятор обычно делают из металла или пластика. Внутри располагаются литий-ионные батарейки высокой емкости, которые и подают ток, когда вам нужно зарядить устройство. Сам аккумулятор заряжается посредством подключения к сети или USB-компьютера через разъем microUSB. Есть также разъем USB, чтобы подключить зарядку для устройств (смартфон, планшет).
 
 Часто устройство оснащено несколькими портами, чтобы можно было одновременно подзарядить несколько устройств. Емкость измеряется в мАч – миллиампер час.</li>
