--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <!-- Карточка товара -->
                     <div class="product-card">
                         <img src="images/product1.jpg" alt="Товар 1">
-                        <h3>Товар 1</h3>
-                        <p>Внешний аккумулятор | Power bank 20000 mAh DP13</p>
+                        <h3>Внешний аккумулятор</h3>
+                        <p>Внешний аккумулятор | Power bank 30000 mAh DP13</p>
                         <p class="price">1500 руб.</p>
                         <a href="product1.html" class="btn">Купить</a>
 
@@ -58,7 +58,7 @@
                     <!-- Карточка товара -->
                     <div class="product-card">
                         <img src="images/product2.jpg" alt="Товар 2">
-                        <h3>Товар 2</h3>
+                        <h3>Видеорегистратор</h3>
                         <p>Видеорегистратор</p>
                         <p class="price">1000 руб.</p>
                         <a href="#" class="btn">Купить</a>
@@ -66,7 +66,7 @@
                     <!-- Карточка товара -->
                     <div class="product-card">
                         <img src="images/product3.jpg" alt="Товар 3">
-                        <h3>Товар 3</h3>
+                        <h3>ТПортативная электростанция</h3>
                         <p>Портативная электростанция</p>
                         <p class="price">5500 руб.</p>
                         <a href="#" class="btn">Купить</a>
