--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <!-- Карточка товара -->
                     <div class="product-card">
                         <img src="images/product3.jpg" alt="Товар 3">
-                        <h3>ТПортативная электростанция</h3>
+                        <h3>Портативная электростанция</h3>
                         <p>Портативная электростанция</p>
                         <p class="price">5500 руб.</p>
                         <a href="#" class="btn">Купить</a>
