--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li><a href="#catalog">Каталог товаров</a></li>
                     <li><a href="#about">О компании</a></li>
                     <li><a href="#contacts">Контакты</a></li>
+                    <li><a href="otcv.html">Отзывы</a></li>
                 </ul>
             </nav>
         </div>
