--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li><a href="#about">О компании</a></li>
                     <li><a href="#contacts">Контакты</a></li>
                     <li><a href="otcv.html">Отзывы</a></li>
+                    <li><a href="register.html">Регистрация</a></li>
                 </ul>
             </nav>
         </div>
@@ -73,6 +74,28 @@
                         <a href="#" class="btn">Купить</a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Регистрация -->
+        <section id="register">
+            <div class="container">
+                <h2>Регистрация</h2>
+                <form action="/register" method="POST">
+                    <label for="username">Имя пользователя:</label>
+                    <input type="text" id="username" name="username" required>
+
+                    <label for="email">Электронная почта:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="password">Пароль:</label>
+                    <input type="password" id="password" name="password" required>
+
+                    <label for="confirm_password">Повторите пароль:</label>
+                    <input type="password" id="confirm_password" name="confirm_password" required>
+
+                    <button type="submit">Зарегистрироваться</button>
+                </form>
             </div>
         </section>
 
