--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +8,26 @@
     <div class="container">
         <h2>Личный кабинет</h2>
         <p>Добро пожаловать, <span id="username">Пользователь</span></p>
-        <a href="server.php?action=logout">Выйти</a>
+        <nav>
+            <ul>
+                <li><a href="#orders">Мои заказы</a></li>
+                <li><a href="#settings">Настройки</a></li>
+                <li><a href="#wishlist">Избранное</a></li>
+                <li><a href="server.php?action=logout">Выйти</a></li>
+            </ul>
+        </nav>
+        <section id="orders">
+            <h3>Мои заказы</h3>
+            <p>Здесь будут отображаться ваши заказы.</p>
+        </section>
+        <section id="settings">
+            <h3>Настройки</h3>
+            <p>Изменение данных профиля.</p>
+        </section>
+        <section id="wishlist">
+            <h3>Избранное</h3>
+            <p>Ваши сохраненные товары.</p>
+        </section>
     </div>
 </body>
 </html>
