--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="#contacts">Контакты</a></li>
                     <li><a href="otcv.html">Отзывы</a></li>
                     <li><a href="register.html">Регистрация</a></li>
+                    <li><a href="profile.html">Регистрация</a></li>
                 </ul>
             </nav>
         </div>
