--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Личный кабинет</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="profile.css">
 </head>
 <body>
     <div class="container">
