--- a/product1.html
+++ b/product1.html
@@ -4,96 +4,26 @@
     <meta charset="UTF-8">
     <title>Товар 1 — Super-Opt</title>
     <meta name="description" content="Описание и характеристики товара 1. Купить оптом в Super-Opt.">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="product1.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        .product, .cart-item {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        #cart {
-            margin-top: 20px;
-        }
-    </style>
 </head>
 <body>
-    <!-- Шапка сайта -->
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="/"><img src="images/logo.png" alt="Super-Opt"></a>
-            </div>
-            <div class="contact-info">
-                <a href="tel:88005005870">8 800 5005 870</a>
-                <a href="mailto:sale@super-opt.com">sale@super-opt.com</a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="/">Главная</a></li>
-                    <li><a href="/catalog">Каталог товаров</a></li>
-                    <li><a href="#">Корзина</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Корзина -->
+    <div id="cart-container">
+        <h2>Корзина</h2>
+        <div id="cart"></div>
+    </div>
 
     <!-- Основное содержимое страницы -->
     <main>
         <div class="product" data-id="1">
-            <span>Товар 1</span>
+            <img src="images/product1.jpg" alt="Товар 1">
+            <h3>Товар 1</h3>
+            <p class="product-description">Описание товара 1. Этот товар обладает уникальными характеристиками и преимуществами.</p>
             <button onclick="addToCart(1)">Добавить в корзину</button>
         </div>
     </main>
 
-    <!-- Корзина -->
-    <h2>Корзина</h2>
-    <div id="cart"></div>
-
-    <script>
-        // Массив для хранения товаров в корзине
-        let cart = [];
-
-        // Функция для добавления товара в корзину
-        function addToCart(productId) {
-            // Проверяем, есть ли уже товар в корзине
-            const existingProduct = cart.find(item => item.id === productId);
-
-            if (existingProduct) {
-                // Если товар уже в корзине, увеличиваем количество
-                existingProduct.quantity += 1;
-            } else {
-                // Если товара нет в корзине, добавляем его с количеством 1
-                cart.push({ id: productId, quantity: 1 });
-            }
-
-            // Обновляем отображение корзины
-            updateCartDisplay();
-        }
-
-        // Функция для удаления товара из корзины
-        function removeFromCart(productId) {
-            cart = cart.filter(item => item.id !== productId);
-            updateCartDisplay();
-        }
-
-        // Функция для обновления отображения корзины
-        function updateCartDisplay() {
-            const cartDiv = document.getElementById('cart');
-            cartDiv.innerHTML = '';
-
-            cart.forEach(item => {
-                const productDiv = document.createElement('div');
-                productDiv.classList.add('cart-item');
-                productDiv.innerHTML = `
-                    <span>Товар ${item.id} (Количество: ${item.quantity})</span>
-                    <button onclick="removeFromCart(${item.id})">Удалить</button>
-                `;
-                cartDiv.appendChild(productDiv);
-            });
-        }
-    </script>
+    <script src="cart.js"></script>
 </body>
 </html>
