--- a/product1.html
+++ b/product1.html
@@ -8,6 +8,25 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <!-- Шапка сайта -->
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="/"><img src="images/logo.png" alt="Super-Opt"></a>
+            </div>
+            <div class="contact-info">
+                <a href="tel:88005005870">8 800 5005 870</a>
+                <a href="mailto:sale@super-opt.com">sale@super-opt.com</a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="/">Главная</a></li>
+                    <li><a href="/catalog">Каталог товаров</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <!-- Корзина -->
     <div id="cart-container">
         <h2>Корзина</h2>
