--- a/product1.html
+++ b/product1.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!-- Шапка сайта -->
+   <!-- Шапка сайта -->
     <header>
         <div class="container">
             <div class="logo">
@@ -44,5 +44,7 @@
     </main>
 
     <script src="cart.js"></script>
+</body>
+</html>
 </body>
 </html>
