--- a/product1.html
+++ b/product1.html
@@ -36,8 +36,8 @@
     <!-- Основное содержимое страницы -->
     <main>
         <div class="product" data-id="1">
-            <img src="images/product1.jpg" alt="Товар 1">
-            <h3>Товар 1</h3>
+            <img src="images/product1.jpg" alt="Внешний аккумулятор">
+            <h3>Внешний аккумулятор</h3>
             <p class="product-description">Описание товара 1. Этот товар обладает уникальными характеристиками и преимуществами.</p>
             <button onclick="addToCart(1)">Добавить в корзину</button>
         </div>
